fix: vercel에서 빌드 오류나는거 수정

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "nested-property": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "typescript": "^4.8.3"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
@@ -43,7 +44,6 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.5.1",
-    "typescript": "^4.5.4",
     "vite": "^2.9.6",
     "vite-plugin-rewrite-all": "^1.0.0",
     "vite-tsconfig-paths": "^3.3.14"
